# oussama-auto-app

./: .env  .gitignore  app.json  babel.config.js  package-lock.json  package.json  supabase_complete_setup.sql  supabase_schema.sql
app/: _layout.tsx  test-suite.tsx
app/(auth)/: login.tsx
app/(tabs)/: _layout.tsx  finance.tsx  index.tsx  inventory.tsx  orders.tsx  shipping.tsx
app/finance/: add.tsx
app/inventory/: [id].tsx  add.tsx
app/orders/: [id].tsx  add.tsx
app/shipping/: [id].tsx  add.tsx
components/dashboard/: OverviewCard.tsx  OverviewCards.tsx  QuickActions.tsx
lib/: auth.tsx  compiler-runtime-polyfill.js  database.types.ts  supabase.ts
react-tauri/: .env.instructions  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-tauri/src-tauri/: Cargo.toml  tauri.conf.json
react-tauri/src-tauri/capabilities/: default.json
react-tauri/src-tauri/src/: main.rs
supabase/: add_id_card_back_url.sql  currency_exchange_rates.sql  fix_financial_transactions.sql  fix_inventory.sql  fix_rls_policies.sql  fix_shipping_image_links.sql  schema.sql  security_policies.sql
types/: database.ts
web/: .env.example  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_final.txt  build_log_final_2.txt  build_log_full.txt  eslint.config.mjs  middleware.ts.bak  next.config.js  package-lock.json  package.json  supabase_schema_update.sql  tailwind.config.js  tsc_output.txt  tsconfig.json
web/app/: globals.css  (+2 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+131 files in other folders)
